# amlhw01PerceptronImplementation

./: .gitignore  CMakeLists.txt  README.md  config.ini  run.sh  stopwords.txt
include/: dirtrav.h  evaluation.h  filenode.h  perceptron.h  stemmer.h  stemmer_ext.h
lib/: CMakeLists.txt
lib/dirtrav/: CMakeLists.txt  dirtrav.c
lib/stemmer/: CMakeLists.txt  stemmer.c
src/: CMakeLists.txt  dsassign.cc  stemmer_ext.cc  test.cc  train.cc
