SET(LIBDIRTRAV_VERSION 1.0)
SET(LIBDIRTRAV_SOVERSION 0.1)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# dirtrav start
SET(LIBDIRTRAV_SRC dirtrav.c)
ADD_LIBRARY(dirtrav SHARED ${LIBDIRTRAV_SRC})
SET_TARGET_PROPERTIES(dirtrav PROPERTIES VERSION ${LIBDIRTRAV_VERSION} SOVERSION ${LIBDIRTRAV_SOVERSION})


ADD_LIBRARY(dirtrav_static STATIC ${LIBDIRTRAV_SRC})
SET_TARGET_PROPERTIES(dirtrav_static PROPERTIES OUTPUT_NAME "dirtrav")

INSTALL (TARGETS dirtrav dirtrav_static
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/dirtrav.h DESTINATION include/)

# dirtrav end




