SET(LIBSTEMMER_VERSION 1.0)
SET(LIBSTEMMER_SOVERSION 0.1)



INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

# stemmer start
SET(LIBSTEMMER_SRC stemmer.c)
ADD_LIBRARY(stemmer SHARED ${LIBSTEMMER_SRC})
SET_TARGET_PROPERTIES(stemmer PROPERTIES VERSION ${LIBSTEMMER_VERSION} SOVERSION ${LIBSTEMMER_SOVERSION})


ADD_LIBRARY(stemmer_static STATIC ${LIBSTEMMER_SRC})
SET_TARGET_PROPERTIES(stemmer_static PROPERTIES OUTPUT_NAME "stemmer")

INSTALL (TARGETS stemmer stemmer_static
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/stemmer.h DESTINATION include/)

# stemmer end




